商品属性管理、また関連の部分の修正を完成した

--- a/src/main/webapp/css/admin-style.css
+++ b/src/main/webapp/css/admin-style.css
@@ -20,3 +20,17 @@
 .image-table {
     margin-top: 20px;
 }
+
+.image-input {
+    margin: 0 20px;
+}
+
+.property-edit {
+    margin: 0 auto 10px;
+}
+
+.property-confirm {
+    display: block;
+    margin: 20px auto 0;
+}
+
