--- a/src/main/webapp/css/shop.css
+++ b/src/main/webapp/css/shop.css
@@ -41,15 +41,7 @@ button, input, textarea, select, a {
     outline: none;
 }
 
-/* common */
-/* length of row */
-.row {
-    position: relative;
-    width: 1140px;
-    height: 100%;
-    margin: 0 auto;
-}
-
+/* common begin */
 /* fix float */
 .clear-fix::after {
     content: "";
@@ -63,270 +55,228 @@ button, input, textarea, select, a {
     *zoom: 1;
 }
 
-.left {
-    float: left;
+.red-color {
+    color: #c40000 !important;
 }
 
-.right {
-    float: right;
-}
-
-/* index page begin */
-/* nav begin */
-.site-nav {
-    height: 60px;
-    background-color: #131921;
-}
-
-.site-nav a {
-    color: #fff;
-}
-
-.site-nav .left {
-    line-height: 60px;
-}
-
-.site-nav .right {
-    display: flex;
-    margin-top: 10px;
-    font-size: 14px;
-    text-align: center;
-}
-
-.site-nav .item {
-    margin: 0 10px;
-    line-height: 42px;
-    font-size: 16px;
-}
-
-/* nav end */
-
-/* func begin */
-.func-nav {
-    height: 140px;
-    box-shadow: 0 0 3px 0 rgba(0, 0, 0, .2);
-}
-
-.func-nav .logo {
-    display: flex;
-    width: 100%;
-    height: 100%;
-    padding: 40px 0;
-}
-
-.func-nav .logo img {
-    width: 180px;
-}
-
-.func-nav .logo span {
-    padding: 15px 0 15px 10px;
-    font-family: serif;
-    color: #131921;
-}
-
-.func-nav .search {
+.ji-container {
     position: relative;
-    float: right;
-    width: 600px;
-    height: 40px;
-    margin-top: 40px;
-    margin-right: 150px;
-}
-
-.func-nav .wrap {
-    float: left;
-    width: 442px;
-}
-
-.func-nav .wrap i {
-    position: absolute;
-    display: inline-block;
-    width: 14px;
-    height: 14px;
-    left: 18px;
-    top: 12px;
-    background-position: 0 -518px;
-}
-
-.func-nav .wrap input {
-    width: 404px;
-    height: 34px;
-    padding: 2px 0 2px 38px;
-    border: 1px solid #febd69;
-    border-bottom-left-radius: 4px;
-    border-top-left-radius: 4px;
-    line-height: 38px;
-}
-
-.func-nav .wrap span {
-    position: absolute;
-    width: 390px;
-    top: 12px;
-    left: 38px;
-    line-height: 1;
-    overflow: hidden;
-    pointer-events: none;
-    touch-action: none;
-    cursor: text;
-    text-overflow: ellipsis;
-    font-size: 14px;
-    color: #999;
-}
-
-.func-nav .button {
-    float: left;
-    width: 90px;
-    height: 40px;
-    background-color: #febd69;
-    border-top-right-radius: 4px;
-    border-bottom-right-radius: 4px;
-    cursor: pointer;
-    line-height: 38px;
-    text-align: center;
-    font-size: 16px;
-    letter-spacing: 1px;
-}
-
-.func-nav .word-list {
-    width: 444px;
-    height: 18px;
-    margin-top: 46px;
-    margin-left: 8px;
-    overflow: hidden;
-}
-
-.func-nav .hot-list {
-    display: inline-block;
-    padding: 0 30px;
-    max-width: 444px;
-    line-height: 12px;
-    border-right: 1px solid #ccc;
-    overflow: hidden;
-    cursor: pointer;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    font-size: 12px;
-    color: #131921;
-}
-
-/* func end */
-
-/* main begin */
-/* banner begin */
-.slider {
-    box-shadow: 0 0 3px 0 rgba(0, 0, 0, .2);
-}
-
-.slider img {
     width: 1140px;
+    height: 100%;
+    margin: 0 auto;
 }
 
-.slider li {
-    height: 456px;
+/* common end */
+
+/* ji-nav begin */
+.ji-nav {
+    padding: 5px;
+    background-color: #f2f2f2;
+    border-bottom: 1px solid #e7e7e7;
+    font-size: 12px;
 }
 
-/* banner end */
-
-/* product begin */
-.category {
-    height: 510px;
-    background-color: #f0f1f3;
+.ji-nav span, .ji-nav a {
+    margin: 0 10px 0 10px;
+    color: #999;
 }
 
-.category a {
-    color: #131921;
+.ji-nav a:hover {
+    color: #c40000;
 }
 
-.category .header {
-    padding: 20px 0;
+.ji-nav a {
+    color: #999;
 }
 
-.category .header .more {
-    display: inline-block;
-    line-height: 1;
-    margin-left: 30px;
-    padding-top: 14px;
-    cursor: pointer;
+/* ji-nav end */
+
+/* ji-search begin */
+
+.ji-search {
+    font-size: 12px;
+}
+
+.ji-search a {
+    color: #999;
+}
+
+.ji-search a:hover {
+    text-decoration: none !important;
+    color: #c40000;
+}
+
+.ji-search .ji-logo {
+    position: absolute;
+    left: 0;
+    width: 180px;
+    z-index: -1;
+}
+
+.jis-div {
+    width: 400px;
+    height: 40px;
+    margin: 50px auto;
+    padding: 1px;
+    background-color: #c40000;
+}
+
+.jis-div input {
+    width: 275px;
+    height: 36px;
+    margin: 1px;
+    border: 1px solid transparent;
+    outline: none;
+}
+
+.jis-div button {
+    width: 110px;
+    border: 1px solid transparent;
+    background-color: #c40000;
+    font-size: 20px;
+    font-weight: bold;
+    color: #fff;
+}
+
+.jis-div .word-list {
+    margin-top: 3px;
+    margin-left: -20px;
+}
+
+.word-list a {
+    padding: 0 20px 0 20px;
     font-size: 14px;
 }
 
-.category .content {
-    margin-right: -28px;
+/* ji-search end */
+
+/* ji-category begin */
+
+.ji-category {
+    width: 100%
 }
 
-.category .product {
-    float: left;
-    position: relative;
-    width: 265px !important;
-    margin-right: 27px;
-    overflow: hidden;
-}
-
-.product img {
-    width: 265px;
-}
-
-.product .info {
-    padding-top: 8px;
-    text-align: center;
+.ji-category .header-bar {
     background-color: #fff;
-}
-
-.info .price .op {
-    line-height: 13px;
-    font-size: 13px;
-    color: #d4282d;
-}
-
-.info .price .pp {
-    color: #999;
-    top: 2px;
-    font-size: 12px;
-    text-decoration: line-through;
-}
-
-/* product end */
-/* main end */
-
-/* index page end */
-
-/* footer begin */
-#footer {
-    position: relative;
-    height: 300px;
-    line-height: 1;
-    background-color: #333;
-}
-
-#footer a {
-    color: #fff;
-}
-
-#footer .logo {
-    display: block;
-    width: 100%;
-    height: 100%;
-    margin: 123px 0;
-}
-
-#footer .logo span {
-    display: inline-block;
-    padding: 15px 0;
-    font-family: serif;
-    color: #fff;
-}
-
-#footer li {
-    float: left;
-    margin: 121px 0 20px 20px;
-    line-height: 20px;
+    border-style: solid;
+    border-width: 0 0 2px;
+    border-color: #FF0036;
     text-align: center;
-    color: #fff;
 }
 
-#footer .copyright {
+.header-bar .header {
+    display: inline-block;
+    width: 200px;
+    height: 36px;
     margin-left: 20px;
+    line-height: 36px;
+    font-size: 16px;
+    font-weight: bold;
+    background-color: #FF0036;
     color: #fff;
 }
 
-/* footer end */
+.header-bar .right-menu {
+    display: inline-block;
+}
+
+.header-bar .right-menu a {
+    font-size: 16px;
+    color: #333;;
+    text-decoration: none;
+}
+
+.header-bar .right-menu span {
+    margin: 0 20px 0 20px;
+}
+
+.header-bar .right-menu img {
+    height: 30px;
+}
+
+.ji-slider {
+    width: 1024px;
+    height: 510px;
+    margin: 0 auto;
+}
+
+.ji-sbck {
+    position: absolute;
+    top: 207px;
+    width: 100%;
+    height: 510px;
+    background-color: #E8E8E8;
+    z-index: -1;
+}
+
+/* ji-category end */
+
+/* ji-products begin */
+.ji-products {
+    margin: 0 auto;
+    padding: 50px 10px 50px 10px;
+    max-width: 1013px;
+    background-color: #f5f5f5;
+}
+
+.p-item {
+    float: left;
+    width: 189px;
+    height: 285px;
+    margin: 8px 4px;
+    border: 1px solid #fff;
+    background-color: #fff;
+    cursor: pointer;
+}
+
+.p-item .p-desc {
+    display: block;
+    padding: 16px;
+    font-size: 12px;
+    color: #666;
+}
+
+.p-item .p-price {
+    display: block;
+    padding-left: 16px;
+    margin-top: -10px;
+    font-size: 16px;
+    color: #ff003a;
+}
+
+.p-item img {
+    width: 187px;
+    height: 190px;
+}
+
+.p-item img:hover {
+    opacity: 0.7;
+    filter: alpha(opacity=70);
+}
+
+.p-row {
+    margin: 0 0 40px 0;
+}
+
+.pd-link {
+    display: inline-block;
+    height: 66px;
+    text-decoration: none;
+}
+
+.c-title {
+    margin-left: 30px;
+    font-weight: bold;
+    font-size: 16px;
+    color: #646464;
+}
+
+.left-mark {
+    display: inline-block;
+    width: 5px;
+    height: 20px;
+    background-color: #19c8a9;
+    vertical-align: top;
+}
+
+/* ji-products end */
