--- a/src/main/webapp/css/shop.css
+++ b/src/main/webapp/css/shop.css
@@ -91,6 +91,15 @@ button, input, textarea, select, a {
 
 /* ji-nav end */
 
+/* ji-footer begin */
+.ji-footer {
+    position: relative;
+    top: 200px;
+    height: 220px;
+    background-color: #000;
+}
+/* ji-footer end */
+
 /* ji-search begin */
 
 .ji-search {
@@ -114,17 +123,18 @@ button, input, textarea, select, a {
 }
 
 .jis-div {
-    width: 400px;
+    width: 623px;
     height: 40px;
     margin: 50px auto;
     padding: 1px;
-    background-color: #c40000;
+    background-color: #FF0036;
 }
 
 .jis-div input {
-    width: 275px;
+    width: 491px;
     height: 36px;
     margin: 1px;
+    padding: 5px 3px 5px 5px;
     border: 1px solid transparent;
     outline: none;
 }
@@ -132,9 +142,8 @@ button, input, textarea, select, a {
 .jis-div button {
     width: 110px;
     border: 1px solid transparent;
-    background-color: #c40000;
+    background-color: #FF0036;
     font-size: 20px;
-    font-weight: bold;
     color: #fff;
 }
 
@@ -645,6 +654,231 @@ button, input, textarea, select, a {
     margin: 20px 0;
 }
 
-
-
 /* product-panel end */
+
+/* ji-account begin */
+.ji-account .ji-address, .ja-confirm {
+    margin: 100px auto 20px;
+    max-width: 1013px;
+}
+
+.ja-tip {
+    margin-bottom: 30px;
+    text-align: left;
+    font-weight: bold;
+    font-size: 16px;
+    color: #333333;
+}
+
+.ja-detail {
+    margin: 20px 20px;
+    width: 600px;
+    font-size: 12px;
+}
+
+.ja-detail label {
+    width: 100px;
+}
+
+.ja-detail label span {
+    font-size: 8px;
+    color: #ff0000;
+}
+
+.ja-detail textarea {
+    width: 400px;
+    border: 1px solid #AFAFAF;
+}
+
+.ja-detail input {
+    width: 200px;
+    border: 1px solid #AFAFAF;
+}
+
+.ji-account table {
+    width: 100%;
+    border-collapse: separate;
+    font-size: 12px;
+}
+
+.ji-account .ja-row td {
+    height: 3px;
+    background-color: #b2d1ff;
+    border-right: 2px solid #fff;
+}
+
+.ji-account .ad-info {
+    padding: 10px 0;
+}
+
+.ji-account .ji-column {
+    text-align: center;
+    color: #999;
+}
+
+.ja-confirm table th {
+    padding-bottom: 5px;
+    text-align: center;
+    font-weight: normal;
+    font-size: 12px;
+    color: #999999;
+}
+
+.ad-info a {
+    display: block;
+    color: #666;
+}
+
+.ad-info img {
+    height: 16px;
+}
+
+.ja-confirm .jo-item td {
+    border-bottom: 1px solid #E5E5E5
+}
+
+.jo-sum {
+    height: 50px;
+    padding: 20px;
+    border-top: 2px solid #B4D0FF;
+    background-color: #F2F6FF;
+}
+
+.jo-sum, .o-total span:first-child {
+    font-size: 12px;
+    color: #999;
+}
+
+.jo-total {
+    height: 40px;
+    margin: 40px;
+}
+
+.jo-total .total {
+    border-bottom: 1px dotted #F2F6FF;
+    font-size: 22px;
+    font-weight: bold;
+    color: #C40000 !important;
+}
+
+.ji-account button {
+    float: right;
+    display: inline-block;
+    width: 180px;
+    height: 40px;
+    margin: 0 10px;
+    border: 1px solid #C40000;
+    background-color: #C40000;
+    line-height: 40px;
+    text-align: center;
+    font-weight: 700;
+    font-size: 14px;
+    color: white;
+}
+
+/* ji-account end */
+
+/* ji-cart begin */
+.ji-cart {
+    margin-top: 150px;
+    font-size: 12px;
+}
+
+.ji-cart .jic-price {
+    margin-left: 5px;
+    margin-right: 3px;
+    font-weight: bold;
+    font-size: 14px;
+    color: #C40000;
+}
+
+.ji-cart .jic-btn {
+    width: 53px;
+    height: 25px;
+    border-radius: 2px;
+    border: 1px solid #aaa;
+    background-color: #aaa;
+    color: white;
+}
+
+.jic-footer {
+    position: relative;
+    top: 50px;
+    background-color: #E5E5E5;
+    line-height: 50px;
+    margin: 20px 0;
+    color: black;
+    padding-left: 20px;
+}
+
+.jic-footer .jic-checkbox {
+    display: inline-block;
+}
+
+.jic-checkbox input {
+    position: relative;
+    top: 7px;
+}
+
+.jic-checkbox label {
+    position: relative;
+    top: 5px;
+}
+
+.jic-footer .jic-downBtn {
+    width: 120px;
+    height: 58px;
+    text-align: center;
+    font-size: 20px;
+}
+
+.jic-list {
+    position: relative;
+    top: 50px;
+}
+
+.jic-list table {
+    width: 100%;
+}
+
+.jic-list thead th {
+    padding: 20px 20px;
+    font-weight: normal;
+    color: #3c3c3c;
+}
+
+.jic-list tbody tr {
+    border: 1px solid #ccc;
+}
+
+.jic-list tbody td {
+    padding: 20px 20px;
+}
+
+.jic-info a {
+    display: block;
+}
+
+.jic-op {
+    display: block;
+    text-decoration: line-through;
+    font-weight: bold;
+    font-size: 14px;
+    color: #9c9c9c;
+}
+
+.jic-pp {
+    font-weight: bold;
+    font-size: 14px;
+    color: #c40000;
+}
+
+.jic-list a {
+    color: #999;
+}
+
+.jic-num input {
+    width: 30px;
+    text-align: center;
+}
+/* ji-cart end */
