--- a/src/main/webapp/css/shop.css
+++ b/src/main/webapp/css/shop.css
@@ -74,11 +74,11 @@ button, input, textarea, select, a {
 
 .ji-nav span, .ji-nav a {
     margin: 0 10px 0 10px;
-    color: #ff0036;
+    color: #e61717;
 }
 
 .ji-nav a:hover {
-    color: #ff0036;
+    color: #e61717;
 }
 
 .ji-nav a {
@@ -110,7 +110,7 @@ button, input, textarea, select, a {
 
 .ji-search a:hover {
     text-decoration: none !important;
-    color: #ff0036;
+    color: #e61717;
 }
 
 .ji-search .ji-logo {
@@ -125,7 +125,7 @@ button, input, textarea, select, a {
     height: 40px;
     margin: 50px auto;
     padding: 1px;
-    background-color: #ff0036;
+    background-color: #e61717;
 }
 
 .jis-div input {
@@ -138,9 +138,9 @@ button, input, textarea, select, a {
 }
 
 .jis-div button {
-    width: 110px;
+    width: 120px;
     border: 1px solid transparent;
-    background-color: #ff0036;
+    background-color: #e61717;
     font-size: 20px;
     color: #fff;
 }
@@ -167,7 +167,7 @@ button, input, textarea, select, a {
     background-color: #fff;
     border-style: solid;
     border-width: 0 0 2px;
-    border-color: #ff0036;
+    border-color: #e61717;
     text-align: center;
 }
 
@@ -179,7 +179,7 @@ button, input, textarea, select, a {
     line-height: 36px;
     font-size: 16px;
     font-weight: bold;
-    background-color: #ff0036;
+    background-color: #e61717;
     color: #fff;
 }
 
@@ -202,8 +202,8 @@ button, input, textarea, select, a {
 }
 
 .ji-slider {
-    width: 1024px;
-    height: 510px;
+    /*width: 1024px;*/
+    /*height: 510px;*/
     margin: 0 auto;
 }
 
@@ -248,7 +248,7 @@ button, input, textarea, select, a {
     padding-left: 16px;
     margin-top: -10px;
     font-size: 16px;
-    color: #ff003a;
+    color: #e61717;
 }
 
 .p-item img {
@@ -325,7 +325,7 @@ button, input, textarea, select, a {
     height: 36px;
     margin: 10px auto 0;
     border-radius: 2px;
-    background-color: #ff0036;
+    background-color: #e61717;
     border-width: 0;
     color: white;
 }
@@ -374,7 +374,7 @@ button, input, textarea, select, a {
     width: 100%;
     height: 34px;
     border: 0;
-    background-color: #ff0036;
+    background-color: #e61717;
     font-size: 14px;
     font-weight: bold;
     color: white;
@@ -414,7 +414,7 @@ button, input, textarea, select, a {
 .pd-info .pd-subtitle {
     margin: 0 10px;
     font-size: 12px;
-    color: #dd2727;
+    color: #e61717;
 }
 
 .pd-info .pd-price {
@@ -454,13 +454,13 @@ button, input, textarea, select, a {
 
 .pd-price .pro-symbol {
     font-size: 18px;
-    color: #c40000;
+    color: #e61717;
 }
 
 .pd-price .pro-num {
     font-size: 30px;
     font-weight: bold;
-    color: #c40000;
+    color: #e61717;
 }
 
 .pd-info .sale-review {
@@ -546,17 +546,17 @@ button, input, textarea, select, a {
 
 .pd-buy .buy {
     margin-top: 5px;
-    border: 1px solid #C40000;
+    border: 1px solid #e61717;
     background-color: #FFEDED;
     text-align: center;
     line-height: 40px;
     font-size: 16px;
-    color: #C40000;
+    color: #e61717;
 }
 
 .pd-buy .cart {
-    border: 1px solid #C40000;
-    background-color: #C40000;
+    border: 1px solid #e61717;
+    background-color: #e61717;
     text-align: center;
     line-height: 40px;
     font-size: 16px;
@@ -598,7 +598,7 @@ button, input, textarea, select, a {
     border-right: 1px solid #cfbfb1;
     text-align: center;
     font-weight: bold;
-    color: #b10000;
+    color: #e61717;
 }
 
 .pd-top .selected:before {
@@ -610,7 +610,7 @@ button, input, textarea, select, a {
     height: 0;
     margin-left: -1px;
     border-width: 1px;
-    border-color: #b00000;
+    border-color: #e61717;
     border-style: solid;
     content: "";
 }
@@ -625,7 +625,7 @@ button, input, textarea, select, a {
     margin-left: -5px;
     border-style: solid;
     border-width: 5px;
-    border-color: #b00000 transparent transparent;
+    border-color: #e61717 transparent transparent;
     content: "";
 }
 
@@ -718,7 +718,7 @@ button, input, textarea, select, a {
 
 .ja-detail label span {
     font-size: 8px;
-    color: #ff0000;
+    color: #e61717;
 }
 
 .ja-detail textarea {
@@ -794,7 +794,7 @@ button, input, textarea, select, a {
     border-bottom: 1px dotted #F2F6FF;
     font-size: 22px;
     font-weight: bold;
-    color: #f40;
+    color: #e61717;
 }
 
 .ji-order input[type="submit"] {
@@ -803,8 +803,8 @@ button, input, textarea, select, a {
     width: 180px;
     height: 40px;
     margin: 0 10px;
-    border: 1px solid #f40;
-    background-color: #f40;
+    border: 1px solid #e61717;
+    background-color: #e61717;
     line-height: 40px;
     text-align: center;
     font-weight: 700;
@@ -825,7 +825,7 @@ button, input, textarea, select, a {
     margin-right: 3px;
     font-weight: bold;
     font-size: 14px;
-    color: #f40;
+    color: #e61717;
 }
 
 .ji-cart .jic-btn {
@@ -911,7 +911,7 @@ button, input, textarea, select, a {
 .jic-pp {
     font-weight: bold;
     font-size: 14px;
-    color: #f40;
+    color: #e61717;
 }
 
 .jic-list a {
@@ -954,7 +954,7 @@ button, input, textarea, select, a {
     margin-left: 5px;
     margin-right: 3px;
     font-weight: bold;
-    color: #f40;
+    color: #e61717;
 }
 
 .ji-pay button {
@@ -963,7 +963,7 @@ button, input, textarea, select, a {
     height: 36px;
     margin: 10px auto 0;
     border-radius: 2px;
-    background-color: #f40;
+    background-color: #e61717;
     border-width: 0;
     color: white;
 }
@@ -999,16 +999,16 @@ button, input, textarea, select, a {
 }
 
 .ji-orders .jio-type a:hover {
-    color: #f40;
+    color: #e61717;
     text-decoration: none;
 }
 
 .ji-orders .jio-active {
-    border-bottom: 2px solid #f40;
+    border-bottom: 2px solid #e61717;
 }
 
 .ji-orders .jio-active a {
-    color: #f40;
+    color: #e61717;
 }
 
 .ji-orders .jio-last {
@@ -1114,7 +1114,7 @@ button, input, textarea, select, a {
 .ji-review .jir-header {
     position: relative;
     vertical-align: middle;
-    border-bottom: 2px solid #f40;
+    border-bottom: 2px solid #e61717;
     line-height: 35px;
     background: #efefef;
     z-index: 1;
@@ -1122,7 +1122,7 @@ button, input, textarea, select, a {
 
 .jir-header h3 {
     float: left;
-    background-color: #f40;
+    background-color: #e61717;
     padding: 2px 50px;
     margin: 0;
     text-align: center;
@@ -1220,7 +1220,7 @@ button, input, textarea, select, a {
 .jip-item .jip-price {
     font-weight: 400;
     font-size: 20px;
-    color: #ff0036;
+    color: #e61717;
     margin: 0 0 5px;
 }
 
